After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791302 - srt: Fix warning error
srt: Fix warning error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-12-06 10:23 UTC by Seungha Yang
Modified: 2017-12-06 17:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
srt: Fix warning error (1.01 KB, patch)
2017-12-06 10:25 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2017-12-06 10:23:49 UTC
gstsrt.c: In function ‘gst_srt_client_connect_full’:
gstsrt.c:151:6: error: ‘sock’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   if (sock != SRT_INVALID_SOCK) {
Comment 1 Seungha Yang 2017-12-06 10:25:04 UTC
Created attachment 365097 [details] [review]
srt: Fix warning error
Comment 2 Olivier Crête 2017-12-06 15:28:15 UTC
Review of attachment 365097 [details] [review]:

will merge
Comment 3 Olivier Crête 2017-12-06 17:08:32 UTC
Merged

Attachment 365097 [details] pushed as 2b39d18 - srt: Fix warning error